--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
         }
         #canvas {
             overflow: hidden;
+            background-color: rgb(20, 20, 20);
         }
         body {
             overflow: hidden;
         }
     </style>
 
-    <canvas id="canvas" width="0px" height="0px"></canvas>
-
     <body>
-
+        <canvas id="canvas" width="0px" height="0px"></canvas>
     </body>
-    
+
     <script src="main.js"></script>
 
 </html>
