Early player graphics & remove flicker in menu title

--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
             { name: "mushroom", url: "images/mushroom.png" },
             { name: "vine", url: "images/vine.png" },
             
-            {name: "titleScreenImg", url: "images/titleScreenImg.png" },
-            {name: "introImg_1", url: "images/introImg_1.png" },
-            {name: "introImg_2", url: "images/introImg_2.png" },
-            {name: "introImg_3", url: "images/introImg_3.png" }
+            { name: "titleScreenImg", url: "images/titleScreenImg.png" },
+            { name: "introImg_1", url: "images/introImg_1.png" },
+            { name: "introImg_2", url: "images/introImg_2.png" },
+            { name: "introImg_3", url: "images/introImg_3.png" },
+
+            { name: "player", url: "images/player.png" }
         ];
         var images = {};
 
