New scene for intro

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             { name: "introImg_1", url: "images/introImg_1.png" },
             { name: "introImg_2", url: "images/introImg_2.png" },
             { name: "introImg_3", url: "images/introImg_3.png" },
+            { name: "introImg_4", url: "images/introImg_4.png" },
 
             { name: "player", url: "images/player.png" }
         ];
